--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Genta - Responsive Fullscreen Coming Soon Template</title>
+        <title>Jordan Frugé - Denton local pianist and musician.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="Denton local pianist and musician.">
+        <meta name="author" content="Jordan Fruge">
 
         <!-- CSS -->
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700'>
@@ -18,7 +18,7 @@
 
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
-            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+            <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- Favicon and touch icons -->
@@ -34,11 +34,11 @@
 
         <div class="page-container container-fluid">
 
-            <h1>Coming Soon</h1>
+            <h1>Jordan Frugé</h1>
 
             <div class="progress">
-                <div class="bar" style="width: 0%;" data-percentage="52">
-                    <div>52%</div>
+                <div class="bar" style="width: 0%;" data-percentage="">
+                    <div class="percent-value"></div>
                 </div>
             </div>
 
@@ -51,8 +51,7 @@
                         <span class="minutes"></span> MINUTES
                         <span class="seconds"></span> SECONDS
                     </div>
-                    <p>We are currently in maintenance mode and will come back very soon with a new set of cool features.<br>
-                    Enter your email in the form below and we’ll notify you as soon as we’re ready.</p>
+                    <p>We're curently in production mode of getting the album remastered and I'll have more updates soon!</p>
                 </div>
                 <div class="span2"></div>
             </div>
@@ -60,18 +59,21 @@
             <div class="social-container row-fluid">
                 <div class="span2"></div>
                 <div class="tweets span6">
-                    <div class="show-tweets"></div>
+                    <a class="twitter-timeline" href="https://twitter.com/jordanfruge" data-widget-id="384442599894814720">Tweets by @jordanfruge</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
                 </div>
                 <div class="social-links span2">
-                    <a class="facebook" href="#"></a>
-                    <a class="twitter" href="#"></a>
-                    <a class="dribbble" href="#"></a>
-                    <a class="pinterest" href="#"></a>
+                    <a class="facebook" href="http://facebook.com/JordanFruge"></a>
+                    <a class="twitter" href="http://twitter.com/Jordaneus"></a>
+                    <a class="soundcloud" href="http://soundcloud.com/jordan-frug"></a>
+                    <!-- <a class="dribbble" href="#"></a>
+                    <a class="pinterest" href="#"></a> -->
                 </div>
                 <div class="span2"></div>
             </div>
 
-            <div class="subscription-form-container row-fluid">
+            <!-- <div class="subscription-form-container row-fluid">
                 <h2>Subscribe</h2>
                 <form class="form-inline" action="assets/sendmail.php" method="post">
                     <input type="text" name="email" placeholder="enter your email...">
@@ -79,7 +81,7 @@
                 </form>
                 <div class="success-message"></div>
                 <div class="error-message"></div>
-            </div>
+            </div> -->
 
         </div>
 
