Added meta description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Jordan Frugé is a pianist and musican based out of Denton, Texas. His newsest album, Ice Cold Fever, is available on iTunes, Google Play, Spotify, and more.">
+  <meta name="author" content="Jordan Frugé">
 
   <link rel="apple-touch-icon" sizes="57x57" href="components/favicons/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="components/favicons/apple-touch-icon-114x114.png" />
