--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Jordan Frugé is a pianist and musican based out of Denton, Texas. His newsest album, Ice Cold Fever, is available on iTunes, Google Play, Spotify, and more.">
   <meta name="author" content="Jordan Frugé">
+  <meta property="og:title" content="Jordan Frugé" />
+  <meta property="og:description" content="Jordan Frugé is a pianist and musican based out of Denton, Texas. His newsest album, Ice Cold Fever, is available on iTunes, Google Play, Spotify, and more." />
+  <meta property="og:type" content="people.musician" />
+  <meta property="og:url" content="http://www.jordanfruge.com" />
+  <meta property="og:image" content="http://jordanfruge.com/img/ICF_small.png" />
 
   <link rel="apple-touch-icon" sizes="57x57" href="components/favicons/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="components/favicons/apple-touch-icon-114x114.png" />
