Adding test OG tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <meta name="author" content="Jordan Frugé">
   <meta property="og:title" content="Jordan Frugé" />
   <meta property="og:description" content="Jordan Frugé is a pianist and musican based out of Denton, Texas. His newsest album, Ice Cold Fever, is available on iTunes, Google Play, Spotify, and more." />
-  <meta property="og:type" content="people.musician" />
+  <meta property="og:type" content="profile" />
+  <meta property="og:profile:first_name" content="Jordan" />
+  <meta property="og:profile:last_name" content="Frugé" />
   <meta property="og:url" content="http://www.jordanfruge.com" />
   <meta property="og:image" content="http://jordanfruge.com/img/ICF_small.png" />
 
