--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="profile" />
   <meta property="profile:first_name" content="Jordan" />
   <meta property="profile:last_name" content="Frugé" />
-  <meta property="og:url" content="http://www.jordanfruge.com/" />
+  <meta property="og:url" content="http://jordanfruge.com/" />
   <meta property="og:image" content="http://jordanfruge.com/img/ICF_small.png" />
 
   <link rel="apple-touch-icon" sizes="57x57" href="components/favicons/apple-touch-icon-57x57.png" />
