Fixing up banner, adding Google Font

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta property="og:url" content="http://jordanfruge.com/" />
   <meta property="og:image" content="http://jordanfruge.com/img/ICF_small.png" />
 
+  <link rel="shortcut icon" type="image/x-icon" href="components/favicons/favicon.ico">
   <link rel="apple-touch-icon" sizes="57x57" href="components/favicons/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="components/favicons/apple-touch-icon-114x114.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="components/favicons/apple-touch-icon-72x72.png" />
@@ -39,6 +40,7 @@
   <link href="components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="components/fontello/css/fontello.css">
+  <link href='http://fonts.googleapis.com/css?family=Days+One' rel='stylesheet' type='text/css'>
 
   <!-- Just for debugging purposes. Don't actually copy this line! -->
   <!--[if lt IE 9]><script src="components/bootstrap/docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -72,7 +74,6 @@
                   <li><a href="#shop">Shop</a></li>
                   <li><a href="#shows">Live Shows</a></li>
                   <li><a href="#about">About</a></li>
-                  <li><a href="#contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -86,15 +87,15 @@
       <div id="top" class="banner">
         <div class="container">
           <div class="row">
-            <div class="group-left equal-height col-md-7">
+            <div class="group-left equal-height col-md-8">
               <div class="group-inner">
                 <span class="top-line">Ice Cold Fever</span>
-                <span class="bottom-line">New Album Available Now</span>
+                <span class="bottom-line">New album available now!</span>
               </div>
             </div>
-            <div class="group-right equal-height col-md-5">
+            <div class="group-right equal-height col-md-4">
               <div class="group-inner">
-                <a href="https://itunes.apple.com/us/album/ice-cold-fever/id735309567?uo=4&at=10lomA" target="itunes_store"><img src="img/ICF_small.png" alt="Ice Cold Fever Album" title="Ice Cold Fever by Jordan Fruge" class="thumbnail"></a>
+                <a href="https://itunes.apple.com/us/album/ice-cold-fever/id735309567?uo=4&at=10lomA" target="itunes_store"><img src="img/ICF_large.png" alt="Ice Cold Fever Album" title="Ice Cold Fever by Jordan Fruge" class="thumbnail"></a>
                 <div class="buttons">
                   <a href="https://itunes.apple.com/us/album/ice-cold-fever/id735309567?uo=4&at=10lomA" target="itunes_store" class="btn btn-default btn-lg btn-itunes btn-block"><i class="social-itunes"></i> Buy on iTunes</a>
                   <a href="#shop" class="btn btn-default btn-cd btn-lg btn-block"><i class="social-paypal"></i> Buy on CD</a>
@@ -116,8 +117,8 @@
       <!-- START THE FEATURETTES -->
       <div class="row featurette">
         <div class="col-md-12">
-          <h2 id="streaming" class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 id="streaming" class="featurette-heading">Streaming &amp; more. <span class="text-muted"></span></h2>
+          <p class="lead">Maybe iTunes ain't your cup o' wine. Well here are some other ways to consume my music that might suit you just fine.</p>
         </div>
         <div class="col-md-12 row">
           <div class=" col-md-3">
