Added web fonts, updated styling

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
     <div class="container marketing">
 
       <!-- START THE FEATURETTES -->
-      <div class="row featurette">
+      <div class="row featurette streaming">
         <div class="col-md-12">
           <h2 id="streaming" class="featurette-heading">Streaming &amp; more. <span class="text-muted"></span></h2>
-          <p class="lead">Maybe iTunes ain't your cup o' wine. Well here are some other ways to consume my music that might suit you just fine.</p>
+          <p class="lead">Maybe iTunes ain't your cup o' wine. Here are some other ways to consume my music that might suit you just fine.</p>
         </div>
         <div class="col-md-12 row">
           <div class=" col-md-3">
@@ -146,8 +146,8 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <div class="col-md-7">
+      <div class="row featurette shop">
+        <div class="col-md-7 group-left">
           <h2 id="shop" class="featurette-heading">Shop. <span class="text-muted">Put my face in your stereo.</span></h2>
           <p class="lead">
             Kids these days with their stuff in the clouds. Get my instant classic on disc, shipped to your door. $13.99
@@ -155,7 +155,7 @@
           <a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_527c63620b16c" href="https://www.wepay.com/stores/349981/item/698185">Buy Now</a>
           <!-- <a class="btn btn-lg btn-success" id="wepay_widget_anchor_527c63620b16c" href="https://www.wepay.com/stores/349981/item/698185">Buy Now</a> -->
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 group-right">
           <a href="https://www.wepay.com/stores/349981/item/698185" title="Buy my album now."><img class="featurette-image img-responsive" src="img/ICF_large.png" alt="Ice Cold Fever by Jordan Fruge"></a>
         </div>
       </div>
