--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Jordan Frugé is a pianist and musican based out of Denton, Texas. His newsest album, Ice Cold Fever, is available on iTunes, Google Play, Spotify, and more.">
+  <meta name="description" content="Jordan Frugé is a musican based in Denton, Texas. His newsest album, Ice Cold Fever, is available on iTunes, Google Play, Spotify, and more.">
   <meta name="author" content="Jordan Frugé">
   <meta property="og:title" content="Jordan Frugé" />
-  <meta property="og:description" content="Jordan Frugé is a pianist and musican based out of Denton, Texas. His newsest album, Ice Cold Fever, is available on iTunes, Google Play, Spotify, and more." />
+  <meta property="og:description" content="Jordan Frugé is a musican based in Denton, Texas. His newsest album, Ice Cold Fever, is available on iTunes, Google Play, Spotify, and more." />
   <meta property="og:type" content="profile" />
   <meta property="profile:first_name" content="Jordan" />
   <meta property="profile:last_name" content="Frugé" />
