Added Soundcloud player

--- a/index.html
+++ b/index.html
@@ -108,129 +108,132 @@
       </div>
 
 
-    <div class="container marketing">
+      <div class="container marketing">
 
-      <!-- START THE FEATURETTES -->
-      <div class="row featurette streaming">
-        <div class="col-md-12">
-          <h2 id="streaming" class="featurette-heading">Streaming &amp; more. <span class="text-muted"></span></h2>
-          <p class="lead">Maybe iTunes ain't your cup o' wine. Here are some other ways to consume my music that might suit you just fine.</p>
-        </div>
-        <div class="col-md-12 row">
-          <div class=" col-md-3">
-            <a class="btn btn-default btn-lg btn-block" href="https://itunes.apple.com/us/album/ice-cold-fever/id735309567?uo=4&at=10lomA" target="itunes_store" title="Buy on iTunes">
-              <i class="social-itunes"></i> Buy on iTunes
-            </a>
+        <!-- START THE FEATURETTES -->
+        <div class="row featurette streaming">
+          <div class="col-md-12">
+            <h2 id="streaming" class="featurette-heading">Streaming &amp; more. <span class="text-muted"></span></h2>
+            <p class="lead">Maybe iTunes ain't your cup o' wine. Here are some other ways to consume my music that might suit you just fine.</p>
           </div>
-          <div class=" col-md-3">
-            <a class="btn btn-default btn-lg btn-block" href="https://play.google.com/store/music/album/Jordan_Frug%C3%A9_Ice_Cold_Fever?id=Bhngim3ywoghnmtskrz6bpsvsr4" title="Buy on Google Play">
-              <i class="social-googleplay"></i> Buy on Google Play
-            </a>
+          <div class="col-md-12 row">
+            <div class=" col-md-3">
+              <a class="btn btn-default btn-lg btn-block" href="https://itunes.apple.com/us/album/ice-cold-fever/id735309567?uo=4&at=10lomA" target="itunes_store" title="Buy on iTunes">
+                <i class="social-itunes"></i> Buy on iTunes
+              </a>
+            </div>
+            <div class=" col-md-3">
+              <a class="btn btn-default btn-lg btn-block" href="https://play.google.com/store/music/album/Jordan_Frug%C3%A9_Ice_Cold_Fever?id=Bhngim3ywoghnmtskrz6bpsvsr4" title="Buy on Google Play">
+                <i class="social-googleplay"></i> Buy on Google Play
+              </a>
+            </div>
+            <div class=" col-md-3">
+              <a class="btn btn-default btn-lg btn-block" href="http://www.amazon.com/Cold-Fever-Explicit-Jordan-Frug%C3%A9/dp/B00GBG5700" title="Buy on Amazon MP3">
+                <i class="social-amazon"></i> Buy on Amazon MP3
+              </a>
+            </div>
+            <div class=" col-md-3">
+              <a class="btn btn-default btn-lg btn-block" href="http://open.spotify.com/album/0HjqnjHycmv1Q9TSQwg1CP" title="Listen on Spotify">
+                <i class="social-spotify"></i> Listen on Spotify
+              </a>
+            </div>
           </div>
-          <div class=" col-md-3">
-            <a class="btn btn-default btn-lg btn-block" href="http://www.amazon.com/Cold-Fever-Explicit-Jordan-Frug%C3%A9/dp/B00GBG5700" title="Buy on Amazon MP3">
-              <i class="social-amazon"></i> Buy on Amazon MP3
-            </a>
-          </div>
-          <div class=" col-md-3">
-            <a class="btn btn-default btn-lg btn-block" href="http://open.spotify.com/album/0HjqnjHycmv1Q9TSQwg1CP" title="Listen on Spotify">
-              <i class="social-spotify"></i> Listen on Spotify
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette shop">
-        <div class="col-md-7 group-left">
-          <h2 id="shop" class="featurette-heading">Shop. <span class="text-muted">Put my face in your stereo.</span></h2>
-          <p class="lead">
-            Kids these days with their stuff in the clouds. Get my instant classic on disc, shipped to your door. $13.99
-          </p>
-          <a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_527c63620b16c" href="https://www.wepay.com/stores/349981/item/698185">Buy Now</a>
-          <!-- <a class="btn btn-lg btn-success" id="wepay_widget_anchor_527c63620b16c" href="https://www.wepay.com/stores/349981/item/698185">Buy Now</a> -->
-        </div>
-        <div class="col-md-5 group-right">
-          <a href="https://www.wepay.com/stores/349981/item/698185" title="Buy my album now."><img class="featurette-image img-responsive" src="img/ICF_large.png" alt="Ice Cold Fever by Jordan Fruge"></a>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-12">
-          <h2 id="shows" class="featurette-heading">Live shows. <span class="text-muted">I'll impress you in-person.</span></h2>
-          <p class="lead">No live shows yet, but we'll keep you posted. I promise.</p>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 id="about" class="featurette-heading">Jordan Frugé. <span class="text-muted">Pianist.</span></h2>
-          <p class="lead">I'm a creator, consumer, and lover of music. I really hope you enjoy the sounds I make.</p>
-          <p>
-            Jordan Emanuel Frugé was born January 1, 1985 in Denton, TX, the third of four children of parents Michael and Susan Frugé. He grew up in nearby small town Ponder, TX, and graduated from Ponder High School. He then enrolled in the College of Music at the University of North Texas, originally declaring Pipe Organ performance as his major, with a minor in Religion/Philosophy. He attended UNT for 5 years, until tuition exceeded the cost of his car, short of achieving his degree.
-          </p>
-          <p>
-            Jordan began playing piano at age 11, and writing, over performing, has always been his main passion. He helped score a short film titled “His and Hers” in 2011 and played keyboard a time with short-lived band, Midnight Revival. He plays from time to time for comedy troupe 4-Day Weekend in Ft. Worth, TX.
-          </p>
-          <p>
-            He self-released his first album, “Ice Cold Fever”, in November of 2013, and hopes earnestly that you like it.
-          </p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive img-thumbnail" src="img/jordan_profile.png" alt="About Jordan Fruge">
-          <div class="social-media">
-            <a class="facebook" href="https://www.facebook.com/jordanfrugemusic" title="Facebook"><i class="social-facebook"></i></a>
-            <a class="twitter" href="https://twitter.com/jordaneus" title="Twitter"><i class="social-twitter"></i></a>
-            <a class="soundcloud" href="https://soundcloud.com/jordanfruge" title="Soundcloud"><i class="social-soundcloud"></i></a>
-            <a class="instagram" href="http://instagram.com/jordaneus" title="Instagram"><i class="social-instagram"></i></a>
-            <a class="youtube" href="www.youtube.com/channel/UCC_Zj2xXQJbGP919Bmnso_A/feed" title="Youtube"><i class="social-youtube"></i></a>
-            <a class="email" href="mailto:jordaneus@gmail.com" title="Email"><i class="social-email"></i></a>
+          <div class="col-med-12 soundcloud">
+            <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/42631479&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=true"></iframe>
           </div>
         </div>
-      </div>
 
-      <hr class="featurette-divider">
+        <hr class="featurette-divider">
 
-      <!-- /END THE FEATURETTES -->
+        <div class="row featurette shop">
+          <div class="col-md-7 group-left">
+            <h2 id="shop" class="featurette-heading">Shop. <span class="text-muted">Put my face in your stereo.</span></h2>
+            <p class="lead">
+              Kids these days with their stuff in the clouds. Get my instant classic on disc, shipped to your door. $13.99
+            </p>
+            <a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_527c63620b16c" href="https://www.wepay.com/stores/349981/item/698185">Buy Now</a>
+            <!-- <a class="btn btn-lg btn-success" id="wepay_widget_anchor_527c63620b16c" href="https://www.wepay.com/stores/349981/item/698185">Buy Now</a> -->
+          </div>
+          <div class="col-md-5 group-right">
+            <a href="https://www.wepay.com/stores/349981/item/698185" title="Buy my album now."><img class="featurette-image img-responsive" src="img/ICF_large.png" alt="Ice Cold Fever by Jordan Fruge"></a>
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-12">
+            <h2 id="shows" class="featurette-heading">Live shows. <span class="text-muted">I'll impress you in-person.</span></h2>
+            <p class="lead">No live shows yet, but we'll keep you posted. I promise.</p>
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 id="about" class="featurette-heading">Jordan Frugé. <span class="text-muted">Pianist.</span></h2>
+            <p class="lead">I'm a creator, consumer, and lover of music. I really hope you enjoy the sounds I make.</p>
+            <p>
+              Jordan Emanuel Frugé was born January 1, 1985 in Denton, TX, the third of four children of parents Michael and Susan Frugé. He grew up in nearby small town Ponder, TX, and graduated from Ponder High School. He then enrolled in the College of Music at the University of North Texas, originally declaring Pipe Organ performance as his major, with a minor in Religion/Philosophy. He attended UNT for 5 years, until tuition exceeded the cost of his car, short of achieving his degree.
+            </p>
+            <p>
+              Jordan began playing piano at age 11, and writing, over performing, has always been his main passion. He helped score a short film titled “His and Hers” in 2011 and played keyboard a time with short-lived band, Midnight Revival. He plays from time to time for comedy troupe 4-Day Weekend in Ft. Worth, TX.
+            </p>
+            <p>
+              He self-released his first album, “Ice Cold Fever”, in November of 2013, and hopes earnestly that you like it.
+            </p>
+          </div>
+          <div class="col-md-5">
+            <img class="featurette-image img-responsive img-thumbnail" src="img/jordan_profile.png" alt="About Jordan Fruge">
+            <div class="social-media">
+              <a class="facebook" href="https://www.facebook.com/jordanfrugemusic" title="Facebook"><i class="social-facebook"></i></a>
+              <a class="twitter" href="https://twitter.com/jordaneus" title="Twitter"><i class="social-twitter"></i></a>
+              <a class="soundcloud" href="https://soundcloud.com/jordanfruge" title="Soundcloud"><i class="social-soundcloud"></i></a>
+              <a class="instagram" href="http://instagram.com/jordaneus" title="Instagram"><i class="social-instagram"></i></a>
+              <a class="youtube" href="www.youtube.com/channel/UCC_Zj2xXQJbGP919Bmnso_A/feed" title="Youtube"><i class="social-youtube"></i></a>
+              <a class="email" href="mailto:jordaneus@gmail.com" title="Email"><i class="social-email"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <!-- /END THE FEATURETTES -->
 
 
-      <!-- FOOTER -->
-      <footer class="footer">
-        <p class="pull-right"><a href="#top">Back to top</a></p>
-        <p>&copy; 2013 Jordan Frugé. </p>
-      </footer>
+        <!-- FOOTER -->
+        <footer class="footer">
+          <p class="pull-right"><a href="#top">Back to top</a></p>
+          <p>&copy; 2013 Jordan Frugé. </p>
+        </footer>
 
-    </div><!-- /.container -->
+      </div><!-- /.container -->
 
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="components/bootstrap/docs-assets/js/holder.js"></script>
-    <script type="text/javascript">
-    $(function() {
-      $('footer a[href*=#]:not([href=#]), .navbar a[href*=#]:not([href=#]), .banner a[href*=#]:not([href=#])').click(function() {
-        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-          var target = $(this.hash);
-          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-          if (target.length) {
-            $('html,body').animate({
-              scrollTop: target.offset().top - 170
-            }, 1000);
-            return false;
+      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+      <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script src="components/bootstrap/docs-assets/js/holder.js"></script>
+      <script type="text/javascript">
+      $(function() {
+        $('footer a[href*=#]:not([href=#]), .navbar a[href*=#]:not([href=#]), .banner a[href*=#]:not([href=#])').click(function() {
+          if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+            var target = $(this.hash);
+            target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+            if (target.length) {
+              $('html,body').animate({
+                scrollTop: target.offset().top - 170
+              }, 1000);
+              return false;
+            }
           }
-        }
+        });
       });
-    });
-    </script>
-    <script type="text/javascript">var WePay = WePay || {};WePay.load_widgets = WePay.load_widgets || function() { };WePay.widgets = WePay.widgets || [];WePay.widgets.push( {object_id: 698185,widget_type: "store_item_buy_now",anchor_id: "wepay_widget_anchor_527c63620b16c",widget_options: {store_id: 349981,show_item_price: false,show_item_images: false,button_text_sold_out: "Sold Out",show_item_custom_options: true,reference_id: ""}});if (!WePay.script) {WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);} else if (WePay.load_widgets) {WePay.load_widgets();}
-    </script>
-    <script type="text/javascript">
-    var highestCol = Math.max($('.group-left').height(),$('.group-right').height());
-    $('.equal-height').height(highestCol);
-    </script>
-  </body>
-  </html>
+      </script>
+      <script type="text/javascript">var WePay = WePay || {};WePay.load_widgets = WePay.load_widgets || function() { };WePay.widgets = WePay.widgets || [];WePay.widgets.push( {object_id: 698185,widget_type: "store_item_buy_now",anchor_id: "wepay_widget_anchor_527c63620b16c",widget_options: {store_id: 349981,show_item_price: false,show_item_images: false,button_text_sold_out: "Sold Out",show_item_custom_options: true,reference_id: ""}});if (!WePay.script) {WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);} else if (WePay.load_widgets) {WePay.load_widgets();}
+      </script>
+      <script type="text/javascript">
+      var highestCol = Math.max($('.group-left').height(),$('.group-right').height());
+      $('.equal-height').height(highestCol);
+      </script>
+    </body>
+    </html>
