--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <h2 id="about" class="featurette-heading">Jordan Frugé. <span class="text-muted">Pianist.</span></h2>
             <p class="lead">I'm a creator, consumer, and lover of music. I really hope you enjoy the sounds I make.</p>
             <p>
-              Jordan Emanuel Frugé was born January 1, 1985 in Denton, TX, the third of four children of parents Michael and Susan Frugé. He grew up in nearby small town Ponder, TX, and graduated from Ponder High School. He then enrolled in the College of Music at the University of North Texas, originally declaring Pipe Organ performance as his major, with a minor in Religion/Philosophy. He attended UNT for 5 years, until tuition exceeded the cost of his car, short of achieving his degree.
+              Jordan Emanuel Frugé was born January 8, 1985 in Denton, TX, the third of four children of parents Michael and Susan Frugé. He grew up in nearby small town Ponder, TX, and graduated from Ponder High School. He then enrolled in the College of Music at the University of North Texas, originally declaring Pipe Organ performance as his major, with a minor in Religion/Philosophy. He attended UNT for 5 years, until tuition exceeded the cost of his car, short of achieving his degree.
             </p>
             <p>
               Jordan began playing piano at age 11, and writing, over performing, has always been his main passion. He helped score a short film titled “His and Hers” in 2011 and played keyboard a time with short-lived band, Midnight Revival. He plays from time to time for comedy troupe 4-Day Weekend in Ft. Worth, TX.
@@ -191,7 +191,7 @@
               <a class="twitter" href="https://twitter.com/jordaneus" title="Twitter"><i class="social-twitter"></i></a>
               <a class="soundcloud" href="https://soundcloud.com/jordanfruge" title="Soundcloud"><i class="social-soundcloud"></i></a>
               <a class="instagram" href="http://instagram.com/jordaneus" title="Instagram"><i class="social-instagram"></i></a>
-              <a class="youtube" href="www.youtube.com/channel/UCC_Zj2xXQJbGP919Bmnso_A/feed" title="Youtube"><i class="social-youtube"></i></a>
+              <a class="youtube" href="https://www.youtube.com/channel/UCC_Zj2xXQJbGP919Bmnso_A/feed" title="Youtube"><i class="social-youtube"></i></a>
               <a class="email" href="mailto:jordaneus@gmail.com" title="Email"><i class="social-email"></i></a>
             </div>
           </div>
