Updated live show section

--- a/index.html
+++ b/index.html
@@ -162,9 +162,45 @@
         <hr class="featurette-divider">
 
         <div class="row featurette">
-          <div class="col-md-12">
+          <div class="col-md-5">
+
+          </div>
+          <div class="col-md-7">
             <h2 id="shows" class="featurette-heading">Live shows. <span class="text-muted">I'll impress you in-person.</span></h2>
             <p class="lead">No live shows yet, but we'll keep you posted. I promise.</p>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Upcoming Shows</h3>
+              </div>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>When</th>
+                    <th>Where</th>
+                    <th>Who</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="show-when">
+                      <p>
+                        January 13th, 2014 @ 8pm
+                      </p>
+                    </td>
+                    <td class="show-where">
+                      <p>
+                        <a href="http://hoochies.localciao.com/" title="Hoochie's Oyster House">Hoochie's Oyster House</a>
+                      </p>
+                    </td>
+                    <td class="show-who">
+                      <p>
+                        Playing alongside <a href="http://noisytomato.bandcamp.com/" title="Lydia Low">Lydia Low</a> and <a href="https://www.facebook.com/billybennettmusic" title="Billy Bennett">Billy Bennett</a>.
+                      </p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
 
